# bucketctl

./: .gitignore  Cargo.toml  README.md  README.zh-Hans.md  install.sh
.github/workflows/: ci.yml  release.yml
docs/: improvement-roadmap.md
src/: cdn.rs  cli.rs  commands.rs  completion.rs  config.rs  dispatch.rs  main.rs  paths.rs  repl.rs  s3.rs  session.rs  shell_complete.rs  ui.rs
src/command/: exec.rs  mod.rs  parse.rs  print.rs  resolve.rs  transfer.rs  types.rs
