[package]
name = "bucketctl"
version = "26.5.27"
edition = "2024"


[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[dependencies]
anyhow = "1.0"
aws-credential-types = "1.2"
aws-sdk-s3 = "1.60"
aws-smithy-types = { version = "1.4", features = ["http-body-1-x"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4.5", features = ["derive"] }
futures-util = "0.3"
human_bytes = "0.4"
http-body = "1.0"
http-body-util = "0.1"
indicatif = "0.18"
owo-colors = "4.1"
rustyline = "14.0"
serde = { version = "1.0", features = ["derive"] }
shlex = "1.3"
tokio = { version = "1.48", features = ["fs", "io-util", "macros", "rt-multi-thread", "signal"] }
tokio-util = { version = "0.7", features = ["io"] }
toml = "0.8"
